// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown inline should render text in a span 1`] = `

<span class="rsg--text-11 rsg--inheritSize-12 rsg--baseColor-16">
  Hello world!
</span>

`;

exports[`Markdown should render a blockquote 1`] = `

<blockquote class="rsg--blockquote-25">
  <p class="rsg--para-2">
    This is a blockquote.
And this is a second line.
  </p>
</blockquote>

`;

exports[`Markdown should render a horizontal rule 1`] = `

<hr class="rsg--hr-28">

`;

exports[`Markdown should render a table 1`] = `

<table class="rsg--table-29">
  <thead class="rsg--thead-30">
    <tr>
      <th class="rsg--th-32 rsg--td-31">
        heading 1
      </th>
      <th class="rsg--th-32 rsg--td-31">
        heading 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="rsg--td-31">
        foo
      </td>
      <td class="rsg--td-31">
        bar
      </td>
    </tr>
    <tr>
      <td class="rsg--td-31">
        more foo
      </td>
      <td class="rsg--td-31">
        more bar
      </td>
    </tr>
  </tbody>
</table>

`;

exports[`Markdown should render check-lists 1`] = `

<ul class="rsg--list-21">
  <li class="rsg--li-23">
    <input type="checkbox"
           readonly
           class="rsg--input-24"
    >
    to do 1
  </li>
  <li class="rsg--li-23">
    <input type="checkbox"
           readonly
           class="rsg--input-24"
    >
    to do 2
  </li>
  <li class="rsg--li-23">
    <input type="checkbox"
           checked
           readonly
           class="rsg--input-24"
    >
    to do 3
  </li>
</ul>

`;

exports[`Markdown should render code blocks without escaping 1`] = `

<pre class="rsg--pre-26">
  <code class="lang-html rsg--code-27">
    <foo>
    </foo>
  </code>
</pre>

`;

exports[`Markdown should render emphasis and strong text 1`] = `

<div>
  <p class="rsg--para-2">
    this text is
    <strong class="rsg--text-11 rsg--inheritSize-12 rsg--baseColor-16 rsg--strong-19">
      strong
    </strong>
  </p>
  <p class="rsg--para-2">
    and this is
    <em class="rsg--text-11 rsg--inheritSize-12 rsg--baseColor-16 rsg--em-18">
      emphasized
    </em>
  </p>
</div>

`;

exports[`Markdown should render headings 1`] = `

<div>
  <div class="rsg--spacing-3">
    <h1 class="rsg--heading-4 rsg--heading1-5">
      one
    </h1>
  </div>
  <div class="rsg--spacing-3">
    <h2 class="rsg--heading-4 rsg--heading2-6">
      two
    </h2>
  </div>
  <div class="rsg--spacing-3">
    <h3 class="rsg--heading-4 rsg--heading3-7">
      three
    </h3>
  </div>
  <div class="rsg--spacing-3">
    <h4 class="rsg--heading-4 rsg--heading4-8">
      four
    </h4>
  </div>
  <div class="rsg--spacing-3">
    <h5 class="rsg--heading-4 rsg--heading5-9">
      five
    </h5>
  </div>
  <div class="rsg--spacing-3">
    <h6 class="rsg--heading-4 rsg--heading6-10">
      six
    </h6>
  </div>
</div>

`;

exports[`Markdown should render inline code with escaping 1`] = `

<p class="rsg--para-2">
  Foo
  <code class="rsg--code-27">
    &lt;bar&gt;
  </code>
  baz
</p>

`;

exports[`Markdown should render links 1`] = `

<p class="rsg--para-2">
  a
  <a href="http://test.com"
     class="rsg--link-0"
  >
    link
  </a>
</p>

`;

exports[`Markdown should render mixed nested lists 1`] = `

<ul class="rsg--list-21">
  <li class="rsg--li-23">
    list 1
  </li>
  <li class="rsg--li-23">
    list 2
    <ol class="rsg--list-21 rsg--ordered-22">
      <li class="rsg--li-23">
        Sub-list
      </li>
      <li class="rsg--li-23">
        Sub-list
      </li>
      <li class="rsg--li-23">
        Sub-list
      </li>
    </ol>
  </li>
  <li class="rsg--li-23">
    list 3
  </li>
</ul>

`;

exports[`Markdown should render ordered lists 1`] = `

<ol class="rsg--list-21 rsg--ordered-22">
  <li class="rsg--li-23">
    list
  </li>
  <li class="rsg--li-23">
    item
  </li>
  <li class="rsg--li-23">
    three
  </li>
</ol>

`;

exports[`Markdown should render paragraphs 1`] = `

<div>
  <p class="rsg--para-2">
    a paragraph
  </p>
  <p class="rsg--para-2">
    another paragraph
  </p>
</div>

`;

exports[`Markdown should render pre-formatted text 1`] = `

<pre class="rsg--pre-26">
  <code class="rsg--code-27">
    this is preformatted
so is this
  </code>
</pre>

`;

exports[`Markdown should render unordered lists 1`] = `

<ul class="rsg--list-21">
  <li class="rsg--li-23">
    list
  </li>
  <li class="rsg--li-23">
    item
  </li>
  <li class="rsg--li-23">
    three
  </li>
</ul>

`;
